# trisquel-packages

./: .gitignore  LICENSE  README.md  changelog.sh  compile.sh  control
10.0/sugar/: package-activity.sh  update_bundles.sh
10.0/sugar/debian/: changelog  control
10.0/trisquel-base-data/debian/: changelog  control
10.0/trisquel-desktop-common-data/debian/: changelog  control  preinst
10.0/trisquel-gtk-theme/debian/: changelog  control
10.0/trisquel-icon-theme/debian/: changelog  control
10.0/trisquel-meta/debian/: changelog  control  rules
10.0/trisquel-mini-data/debian/: changelog  control  prerm
10.0/trisquel-screensaver/debian/: changelog  control  rules
10.0/trisquel-sounds/debian/: changelog  copyright  links
10.0/trisquel-wallpapers/debian/: changelog
10.0/ubiquity-slideshow-trisquel/debian/: changelog  control
11.0/sugar/: do-all.sh  update_bundles.sh
11.0/sugar/debian/: changelog
11.0/trisquel-base-data/debian/: changelog  control  copyright  postinst  prerm
4.0/trisquel-screensaver-4.0/: data.sh
4.5/trisquel-sounds-4.5/: convert.sh
6.0/gnome-app-install/: BUGS  Changelog  README.codecs  TODO  gnome-app-install  setup.cfg  setup.py  update-app-install
6.0/gnome-app-install/data/: Makefile  Makefile.am  featured.txt  gnome-app-install.desktop.in  gnome-app-install.glade  gnome-app-install.schemas.in
7.0/gnome-app-install/: README.extraction
7.0/sugar/: build.sh
8.0/gnome-app-install/: README  gnome-app-install-helper
8.0/trisquel-sounds/: COPYING
extra/flashvideoreplacer/: update.sh
extra/gnome-app-install/: AUTHORS
(+946 files in other folders)
